--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,116 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
-    android:background="@color/light_bg_color"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start"
+    android:background="@color/white"
     tools:context=".view.MainActivity">
 
-    <LinearLayout
-        android:id="@+id/mainLayout2"
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:id="@+id/home_toolbar"
-            app:title="Home"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/light_bg_color"
-            android:elevation="6dp" />
-
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_marginBottom="50dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        android:layout_height="match_parent" />
 
 
-    </LinearLayout>
-
-
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/mainLayout"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_navigation_menu"
+        />
 
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottomAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:backgroundTint="@color/bg_fields_color"
-            app:fabCradleMargin="10dp"
-            app:fabCradleRoundedCornerRadius="50dp">
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottomNavigationView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:background="@android:color/transparent"
-                app:itemBackground="@color/bg_fields_color"
-                app:labelVisibilityMode="labeled"
-                app:menu="@menu/bottom_menu" />
-
-        </com.google.android.material.bottomappbar.BottomAppBar>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/logo_placeholder"
-            android:src="@drawable/ic_sos_png"
-            app:layout_anchor="@id/bottomAppBar"
-            android:layout_gravity="center"
-            android:foregroundGravity="center"
-            android:tint="#00000000"
-            app:fabCustomSize="40dp"
-            app:maxImageSize="80dp"
-            app:tint="#00000000"
-            android:backgroundTint="#00000000"
-            android:tintMode="screen"
-            android:id="@+id/sos"
-            app:layout_anchorGravity="center"
-            />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/logo_placeholder"
-            android:src="@drawable/bg_btn"
-            app:layout_anchor="@id/bottomAppBar"
-            android:layout_gravity="end"
-            android:tint="#00000000"
-            app:fabCustomSize="40dp"
-            app:maxImageSize="60dp"
-            app:tint="#00000000"
-            android:tintMode="screen"
-            android:id="@+id/fab"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="80dp"
-            app:layout_anchorGravity="end"
-            />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/nav_view"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header_layout"
-        app:menu="@menu/nav_menu"
-        app:itemIconTint="@color/primary_Color"
-        app:itemTextColor="@color/black"/>
-
-</androidx.drawerlayout.widget.DrawerLayout>
+</RelativeLayout>
