--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/light_bg_color"
     tools:context=".view.fragments.ProfileFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -108,6 +108,24 @@
                     android:textAlignment="textStart"
                     android:layout_marginTop="10dp"
                     android:drawableEnd="@drawable/ic_edit"
+                    />
+
+                <android.widget.Button
+                    android:id="@+id/logout_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/logout"
+                    android:textColor="@color/light_txt_color"
+                    android:textAllCaps="false"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/bg_input"
+                    android:fontFamily="@font/inter_regular"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:textAlignment="textStart"
+                    android:layout_marginTop="10dp"
+                    android:drawableEnd="@drawable/ic_logout"
                     />
 
                 <android.widget.Button
