--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,7 +37,7 @@
         android:backgroundTint="@color/black"
         android:elevation="6dp"
         android:fontFamily="@font/inter_medium"
-        android:text="Cloth Form"
+        android:text="Cloth Recommender"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
