--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -41,7 +41,7 @@
     <ImageView
         android:id="@+id/previewImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="420dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_input"
@@ -56,6 +56,7 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/previewImage"
         android:layout_margin="20dp"
+        android:gravity="end"
         >
 
         <ImageButton
@@ -64,8 +65,20 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bg_input"
             android:contentDescription="@string/logo_placeholder"
-            android:padding="6dp"
-            android:src="@drawable/ic_home"/>
+            android:padding="8dp"
+            android:src="@drawable/ic_outline_heart"
+            android:layout_marginEnd="20dp"
+            />
+
+        <ImageButton
+            android:id="@+id/downloadBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_input"
+            android:contentDescription="@string/logo_placeholder"
+            android:padding="8dp"
+            android:src="@drawable/ic_download"
+            />
 
     </LinearLayout>
 
