--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -50,11 +50,25 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar2"
          />
 
+    <TextView
+        android:id="@+id/noticeText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Note"
+        android:fontFamily="@font/inter_regular"
+        android:textSize="14sp"
+        android:textColor="@color/light_txt_color"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/previewImage" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/previewImage"
+        app:layout_constraintTop_toBottomOf="@+id/noticeText"
         android:layout_margin="20dp"
         android:gravity="end"
         >
