--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -79,7 +79,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/profile"
-                    android:textColor="@color/light_txt_color"
+                    android:textColor="@color/black"
                     android:textAllCaps="false"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
@@ -97,7 +97,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/favourite"
-                    android:textColor="@color/light_txt_color"
+                    android:textColor="@color/black"
                     android:textAllCaps="false"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
@@ -115,7 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/logout"
-                    android:textColor="@color/light_txt_color"
+                    android:textColor="@color/black"
                     android:textAllCaps="false"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
@@ -133,7 +133,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/delete_account"
-                    android:textColor="@color/light_txt_color"
+                    android:textColor="@color/black"
                     android:textAllCaps="false"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
