--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -62,6 +62,43 @@
                 android:layout_marginTop="14dp"
                 android:orientation="vertical" >
 
+                <EditText
+                    android:id="@id/userName"
+                    android:layout_width="match_parent"
+                    android:layout_height="46dp"
+                    android:autofillHints="username"
+                    android:background="@drawable/bg_input"
+                    android:fontFamily="@font/inter_regular"
+                    android:textSize="15sp"
+                    android:hint="@string/full_name"
+                    android:inputType="text"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="12dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <EditText
+                    android:id="@+id/userEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="46dp"
+                    android:autofillHints="emailAddress"
+                    android:background="@drawable/bg_input"
+                    android:fontFamily="@font/inter_regular"
+                    android:textSize="15sp"
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="12dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
                 <android.widget.Button
                     android:id="@+id/reset_password"
                     android:layout_width="match_parent"
@@ -76,7 +113,7 @@
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:textAlignment="textStart"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     />
 
                 <android.widget.Button
